Fix header and footer layout issues
- Fix header title not being contained due to overriding by display flex
- Fix footer text not aligning with rest of page contents due to not using custom grid solution

--- a/sass/site/blocks/_core.scss
+++ b/sass/site/blocks/_core.scss
@@ -69,9 +69,9 @@ p.wp-block-subhead {
 		@include shadowMedium;
 		transform: translateY(-0.1rem)
 	}
-	&:active {
+	&:active, &:active:focus {
 		@include shadowNormal;
-		transform: translateY(0.1rem)
+		transform: translateY(2px)
 	}
 }
 
