--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -16,6 +16,7 @@
 	padding: 4rem 0;
   min-height: 360px;
   display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   .entry-title {
